# sigefip-backend

./: .gitignore  CMakeLists.txt  CMakePresets.json  requirements.txt  sigefip-back.cpp  sigefip-back.h  start.sh
api/: index.py
app/config/constants/: constants.h
app/controllers/auth/: AuthController.cpp  AuthMiddleware.h
app/controllers/users/: UserController.cpp  UserController.h
app/entities/: User.h
app/repositories/: UserRepository.h
app/services/: UserService.h
app/shared/: BaseController.h
app/shared/helpers/: Base64Helper.h  EnvHelper.h  RequestHelper.h  Sha256Helper.h
src/: app_controller.py  app_module.py  app_service.py  config.py
src/core/: base_controller.py  responses.py
src/modules/admin/: admin_controller.py  admin_model.py  admin_module.py  admin_service.py
src/modules/auth/: auth_controller.py  auth_model.py  auth_module.py  auth_service.py
